--- a/www/styles/styles.css
+++ b/www/styles/styles.css
@@ -28,7 +28,7 @@ body * {
     width: 80%;
     margin: 50px auto 0 auto;
     min-height: 200px;
-    background-color: #f7faf9;
+    background-color: #ededed;
     flex-direction: column;
 }
 
